--- a/trials.ipynb
+++ b/trials.ipynb
@@ -160,8 +160,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4fe27862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Annotated, TypedDict\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langgraph.prebuilt import ToolNode, tools_condition\n",
+    "\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage\n",
+    "from langchain_core.tools import tool\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Your local modules\n",
+    "from research.helpers import LLM\n",
+    "from research.tools import pandas_tool, sql_tool, rag_tool\n",
+    "class GraphState(TypedDict, total=False):\n",
+    "    messages: Annotated[List[BaseMessage], add_messages]\n",
+    "    inputs: str\n",
+    "    choice: str  # Directly store the tool choice as a string\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Graph builder\n",
+    "# -------------------------\n",
+    "def create_graph():\n",
+    "    graph = StateGraph(GraphState)\n",
+    "\n",
+    "    # 1) Input node: decide which tool to use by calling the LLM\n",
+    "    def inputs_node(state: GraphState) -> GraphState:\n",
+    "        state[\"inputs\"] = input(\"Enter your query: \")\n",
+    "        user_input = state[\"inputs\"]\n",
+    "\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"\"\"You are a router that decides which tool to use for a user request.\n",
+    "\n",
+    "User input:\n",
+    "{user_input}\n",
+    "\n",
+    "Return one of:\n",
+    "- \"pandas\" for DataFrame wrangling/visualizations\n",
+    "- \"sql\" for queries that should be answered with SQL (incl. pandasql)\n",
+    "- \"rag\" for retrieval-augmented generation (document/knowledge lookup)\n",
+    "\n",
+    "Return ONLY the literal label.\"\"\",\n",
+    "inputs=[\"user_input\"]\n",
+    "        )\n",
+    "        prompt=prompt.format(user_input=user_input)\n",
+    "\n",
+    "        response = LLM().llm.invoke({\"user_input\": user_input, \"prompt\": prompt})\n",
+    "\n",
+    "        # Directly store the choice as a string\n",
+    "        state[\"choice\"] = response  # Assuming response is a string\n",
+    "\n",
+    "        return state\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c929785",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.1)",
    "language": "python",
    "name": "python3"
   },
