--- a/trials.ipynb
+++ b/trials.ipynb
@@ -222,8 +222,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3c929785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from typing import List, Annotated, TypedDict\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langgraph.prebuilt import ToolNode, tools_condition\n",
+    "\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage\n",
+    "from langchain_core.tools import tool\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Your local modules\n",
+    "from research.helpers import LLM\n",
+    "from research.tools import pandas_tool, sql_tool, rag_tool\n",
+    "\n",
+    "def inputs_node():\n",
+    "        user_input  = input(\"Enter your query: \")\n",
+    "        \n",
+    "\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"\"\"You are a router that decides which tool to use for a user request.\n",
+    "\n",
+    "User input:\n",
+    "{user_input}\n",
+    "\n",
+    "Return one of:\n",
+    "- \"pandas\" for DataFrame wrangling/visualizations\n",
+    "- \"sql\" for queries that should be answered with SQL (incl. pandasql)\n",
+    "- \"rag\" for retrieval-augmented generation (document/knowledge lookup)\n",
+    "\n",
+    "Return ONLY the literal label.\"\"\",\n",
+    "inputs=[\"user_input\"]\n",
+    "        )\n",
+    "        prompt=prompt.format(user_input=user_input)\n",
+    "\n",
+    "        response = LLM().llm.invoke(prompt)\n",
+    "\n",
+    "        # Directly store the choice as a string\n",
+    "        return response  # Assuming response is a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4b24d126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=inputs_node()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "36ef6167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pandas'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b273304",
    "metadata": {},
    "outputs": [],
    "source": []
